--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 attrs==24.2.0
 beautifulsoup4==4.12.3
-bs4==0.0.2
 certifi==2024.8.30
+charset-normalizer==3.3.2
+git-filter-repo==2.45.0
 h11==0.14.0
 idna==3.8
+lxml==5.3.0
 outcome==1.3.0.post0
 PySocks==1.7.1
+requests==2.32.3
 selenium==4.24.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
