--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,18 +28,28 @@ jobs:
 
     - name: Install ChromeDriver
       run: |
-        # Extract just the major.minor.patch version of Chrome
+        # Extract the Chrome version and log it for debugging
         CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
-        # Get the corresponding ChromeDriver version
+        echo "Detected Chrome version: $CHROME_VERSION"
+        
+        # Try to get the corresponding ChromeDriver version
         CHROMEDRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROME_VERSION}")
-        # If CHROMEDRIVER_VERSION is empty, fallback to the latest
-        if [ -z "$CHROMEDRIVER_VERSION" ]; then CHROMEDRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE"); fi
+        
+        # Debugging: log the ChromeDriver version or an error message
+        if [ -z "$CHROMEDRIVER_VERSION" ]; then
+          echo "Failed to retrieve ChromeDriver version for Chrome $CHROME_VERSION. Falling back to the latest version."
+          CHROMEDRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE")
+        else
+          echo "Detected ChromeDriver version: $CHROMEDRIVER_VERSION"
+        fi
+        
         # Download and install ChromeDriver
         wget https://chromedriver.storage.googleapis.com/${CHROMEDRIVER_VERSION}/chromedriver_linux64.zip
         unzip chromedriver_linux64.zip
         sudo mv chromedriver /usr/local/bin/chromedriver
         sudo chmod +x /usr/local/bin/chromedriver
         chromedriver --version
+
 
     - name: Run the Job Alert Bot
       env:
