--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,19 +13,12 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Install Python and Pip
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y python3 python3-pip
-        python3 --version
-        pip3 --version
-
     - name: Run Job Alert Bot in Docker
-      uses: docker://selenium/standalone-chrome:latest
+      uses: docker://joyzoursky/python-chromedriver:3.9-selenium
       with:
         args: >
           sh -c "pip install -r requirements.txt &&
-                 python NYFA_jobalerts.py"
+                 python your_script.py"
       env:
         SCRAPE_URL: ${{ secrets.SCRAPE_URL }}
         API_KEY: ${{ secrets.API_KEY }}
