--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         args: >
           sh -c "pip install -r requirements.txt &&
-                 python your_script.py"
+                 python NYFA_jobalerts.py"
       env:
         SCRAPE_URL: ${{ secrets.SCRAPE_URL }}
         API_KEY: ${{ secrets.API_KEY }}
