--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
       with:
         args: >
           sh -c "pip install -r requirements.txt &&
-                 python NYFA_jobalerts.py"
+                 python runbot.py"
       env:
         API_KEY: ${{ secrets.API_KEY }}
         MAILGUN_DOMAIN: ${{ secrets.MAILGUN_DOMAIN }}
